Use DZP::PkgVersion, fix DZP::Git release branch

--- a/dist.ini
+++ b/dist.ini
@@ -31,8 +31,7 @@ major = 0
 [Meta::Contributors]
 
 [PodWeaver]
-[RewriteVersion]
-skip_version_provider = 1
+[PkgVersion]
 
 [ChangelogFromGit::CPAN::Changes]
 edit_changelog = 1
@@ -57,7 +56,7 @@ copy = LICENSE
 
 [RunExtraTests]
 [Git::CommitBuild]
-release_branch  => 'release',
+release_branch = release
 
 [UploadToCPAN]
 
