--- a/dist.ini
+++ b/dist.ini
@@ -17,7 +17,7 @@ exclude_filename = LICENSE
 [@Git]
 untracked_files = warn
 signed = 1
-branch = release
+branch = build
 allow_dirty = dist.ini
 allow_dirty = Changes
 allow_dirty = LICENSE
@@ -56,5 +56,8 @@ copy = LICENSE
 
 [Git::CommitBuild]
 release_branch = release
+branch = build
 
-[UploadToCPAN]
+;[UploadToCPAN]
+[FakeRelease]
+
