--- a/dist.ini
+++ b/dist.ini
@@ -17,13 +17,14 @@ exclude_filename = LICENSE
 [@Git]
 untracked_files = warn
 signed = 1
-branch = build
+branch = release
 allow_dirty = dist.ini
 allow_dirty = Changes
 allow_dirty = LICENSE
 allow_dirty = README.md
 
-[@GitHub]
+[GitHub::Meta]
+
 [AutoVersion]
 major = 0
 
@@ -56,8 +57,9 @@ copy = LICENSE
 
 [Git::CommitBuild]
 release_branch = release
-branch = build
+branch = 
 
 ;[UploadToCPAN]
 [FakeRelease]
+
 
