--- a/dist.ini
+++ b/dist.ini
@@ -14,7 +14,15 @@ exclude_filename = LICENSE
 
 [PruneCruft]
 
-[@Git]
+[Git::Commit]
+[Git::CommitBuild]
+branch =
+release_branch = release
+multiple_inheritance = 1
+
+[Git::Tag]
+;[Git::Push]
+[Git::Check]
 untracked_files = warn
 signed = 1
 branch = release
@@ -55,11 +63,5 @@ copy = LICENSE
 [PodSyntaxTests]
 [Test::Compile]
 
-[Git::CommitBuild]
-release_branch = release
-branch = 
-
 ;[UploadToCPAN]
 [FakeRelease]
-
-
