Commit build results

--- a/dist.ini
+++ b/dist.ini
@@ -14,16 +14,25 @@ exclude_filename = LICENSE
 
 [PruneCruft]
 
-[@Git]
-untracked_files = warn
-signed = 1
+[Git::Commit]
+[Git::CommitBuild]
+branch =
+release_branch = release
+multiple_inheritance = 1
+
+[Git::Tag]
 branch = release
+signed = 1
+
+[Git::Check]
+untracked_files = warn
 allow_dirty = dist.ini
 allow_dirty = Changes
 allow_dirty = LICENSE
 allow_dirty = README.md
 
-[@GitHub]
+[GitHub::Meta]
+
 [AutoVersion]
 major = 0
 
@@ -54,7 +63,5 @@ copy = LICENSE
 [PodSyntaxTests]
 [Test::Compile]
 
-[Git::CommitBuild]
-release_branch = release
-
 [UploadToCPAN]
+[Git::Push]
